syntax = "proto3";

import "index_constants.proto";

package proto;

message ModelConfig {
  enum IndexStrategy {
    LoadALL = 0;
    LoadNewest = 1;
  }

  Constants.ModelName model_name = 1;
  repeated Constants.IndexType index_types = 2;
  IndexStrategy index_strategy = 3;
}

message IndexConfig {
  string index_path = 1;
  repeated ModelConfig model_config = 2;
}


message ServerConfig {

  IndexConfig index_config = 2;
}





